--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" type="image/png" href="./assets/icon.jpg">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 	integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" rel="stylesheet">
@@ -76,8 +77,8 @@
 	<script type="module" src="javascript/user.js?v=1.0.1"></script>
 	<script type="module" src="javascript/2fa.js?v=1.0.1"></script>
 	<script type="module" src="javascript/game.js"></script>
-	<script type="module" src="javascript/utils/settings.js?v=1.0.1"></script>
 	<script type="module" src="javascript/tournament.js?v=1.0.1"></script>
+	<script type="module" src="javascript/utils/settings.js?v=1.0.1"></script>
 	<script type="module" src="javascript/components/sidenav.js"></script>
 	<script type="module" src="javascript/components/loginCard.js"></script>
 	<script type="module" src="javascript/components/registerCard.js"></script>
