--- a/frontend/pages/sidenav.html
+++ b/frontend/pages/sidenav.html
@@ -26,12 +26,12 @@
 					Leaderboard
 				</a>
 			</li> -->
-			<li class="nav-item">
+			<!-- <li class="nav-item">
 				<a href="/ponggame" class="nav-link text-white fw-bolder" data-link>
 					<i class="fa-solid fa-trophy"></i>
 					Tournaments
 				</a>
-			</li>
+			</li> -->
 			<li class="nav-item">
 				<a href="/requests" class="nav-link text-white fw-bolder requests" data-link>
 					<i class="fa-solid fa-user-check"></i>
