--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -15,7 +15,7 @@
 						<div class="d-flex justify-content-between">
 							<div>
 								<h2 class="card-title fw-bold" id="loggedUserName1">John Doe</h2>
-								<p class="text-muted" id="userNickName">@johndoe</p>
+								<!-- <p class="text-muted" id="userNickName">@johndoe</p> -->
 							</div>
 						</div>
 						<div class="card-text d-flex justify-content-between">
@@ -34,7 +34,7 @@
 							</div>
 							<div class="text-center">
 								<i class="fa-regular fa-message"></i>
-								<p>Role</p>
+								<span class="mt-2">Player</span>
 								<p class="text-success mt-2">Player</p>
 							</div>
 						</div>
@@ -63,17 +63,17 @@
 						<div class="card-text">
 							<div class="d-flex bd-highlight mb-3">
 								<div class="me-auto bd-highligh">User Name</div>
-								<div class="bd-highlight  text-muted">Your Name</div>
+								<div class="bd-highlight  text-muted" id="myName">Your Name</div>
 							</div>
 							<hr class="my-2">
 							<div class="d-flex bd-highlight mb-3">
 								<div class="me-auto bd-highligh">Full name</div>
-								<div class="bd-highlight text-muted">Your Name</div>
+								<div class="bd-highlight text-muted" id="myFullName">Your Name</div>
 							</div>
 							<hr class="my-2">
 							<div class="d-flex bd-highlight mb-3">
 								<div class="me-auto bd-highligh">Email account</div>
-								<div class="bd-highlight text-muted">yourname@gmail.com</div>
+								<div class="bd-highlight text-muted" id="myEmail">yourname@gmail.com</div>
 							</div>
 						</div>
 					</div>
@@ -112,64 +112,16 @@
 									<thead>
 										<tr>
 											<th scope="col">#</th>
-											<th scope="col">Game Type</th>
-											<th scope="col">Time</th>
-											<th scope="col">Players</th>
+											<th scope="col">Game ID</th>
+											<th scope="col">Player 1</th>
+											<th scope="col">Player 2</th>
 											<th scope="col">Result</th>
+											<th scope="col">Winner</th>
+											<th scope="col">Loser</th>
 										</tr>
 									</thead>
-									<tbody>
-										<tr>
-											<th scope="row">1</th>
-											<td><a href="tournament.html"
-													style="color: inherit; text-decoration: none;">Tournament
-													One</a></td>
-											<td>Dec 30, 2024</td>
-											<td>8</td>
-											<td>Playing</td>
-										</tr>
-										<tr>
-											<th scope="row">2</th>
-											<td>Apex Legends Finals</td>
-											<td>Feb 8, 2023</td>
-											<td>1200</td>
-											<td>Register</td>
-										</tr>
-										<tr>
-											<th scope="row">3</th>
-											<td>Rocket League Weekly</td>
-											<td>Mar 15, 2023</td>
-											<td>800</td>
-											<td>Playing</td>
-										</tr>
-										<tr>
-											<th scope="row">4</th>
-											<td>Call of Duty Warzone</td>
-											<td>Apr 20, 2023</td>
-											<td>650</td>
-											<td>Register</td>
-										</tr>
-										<tr>
-											<th scope="row">5</th>
-											<td>Fortnite Championship</td>
-											<td>May 30, 2023</td>
-											<td>900</td>
-											<td>Finished</td>
-										</tr>
-										<tr>
-											<th scope="row">6</th>
-											<td>Valorant Masters</td>
-											<td>Jun 18, 2023</td>
-											<td>1100</td>
-											<td>Playing</td>
-										</tr>
-										<tr>
-											<th scope="row">7</th>
-											<td>Dota 2 Invitational</td>
-											<td>Jul 15, 2023</td>
-											<td>1500</td>
-											<td>Register</td>
-										</tr>
+									<tbody id="matchHistoryTableBody">
+										<!-- Rows will be dynamically inserted here -->
 									</tbody>
 								</table>
 
