--- a/frontend/pages/userprofile.html
+++ b/frontend/pages/userprofile.html
@@ -111,64 +111,16 @@
 									<thead>
 										<tr>
 											<th scope="col">#</th>
-											<th scope="col">Game Type</th>
-											<th scope="col">Time</th>
-											<th scope="col">Players</th>
+											<th scope="col">Game ID</th>
+											<th scope="col">Player 1</th>
+											<th scope="col">Player 2</th>
 											<th scope="col">Result</th>
+											<th scope="col">Winner</th>
+											<th scope="col">Loser</th>
 										</tr>
 									</thead>
 									<tbody>
-										<tr>
-											<th scope="row">1</th>
-											<td><a href="tournament.html"
-													style="color: inherit; text-decoration: none;">Tournament
-													One</a></td>
-											<td>Dec 30, 2024</td>
-											<td>8</td>
-											<td>Playing</td>
-										</tr>
-										<tr>
-											<th scope="row">2</th>
-											<td>Apex Legends Finals</td>
-											<td>Feb 8, 2023</td>
-											<td>1200</td>
-											<td>Register</td>
-										</tr>
-										<tr>
-											<th scope="row">3</th>
-											<td>Rocket League Weekly</td>
-											<td>Mar 15, 2023</td>
-											<td>800</td>
-											<td>Playing</td>
-										</tr>
-										<tr>
-											<th scope="row">4</th>
-											<td>Call of Duty Warzone</td>
-											<td>Apr 20, 2023</td>
-											<td>650</td>
-											<td>Register</td>
-										</tr>
-										<tr>
-											<th scope="row">5</th>
-											<td>Fortnite Championship</td>
-											<td>May 30, 2023</td>
-											<td>900</td>
-											<td>Finished</td>
-										</tr>
-										<tr>
-											<th scope="row">6</th>
-											<td>Valorant Masters</td>
-											<td>Jun 18, 2023</td>
-											<td>1100</td>
-											<td>Playing</td>
-										</tr>
-										<tr>
-											<th scope="row">7</th>
-											<td>Dota 2 Invitational</td>
-											<td>Jul 15, 2023</td>
-											<td>1500</td>
-											<td>Register</td>
-										</tr>
+										
 									</tbody>
 								</table>
 
